--- a/site/cardType/cardType03.html
+++ b/site/cardType/cardType03.html
@@ -30,16 +30,13 @@
         img {
             width: 100%;
         }
-        h1, h2, h3, h4, h5, h6 {
-            font-weight: normal;
-        }
         .type2 {
             padding-top: 10px;
         }
         /* common */
         .container {
             width: 1160px;
-            height: 522px;
+            height: 517px;
             margin: 0 auto;
             background-color: #fff;
         }
@@ -48,7 +45,6 @@
         }
         .section > h2 {
             font-size: 50px;
-            line-height: 1;
             text-align: center;
             margin-bottom: 20px;
         }
@@ -80,12 +76,14 @@
             text-align: right;
             position: absolute;
             right: 73px;
+            bottom: 40px;
+            color: #dd2a2a;
         }
         .right2 {
             text-align: right;
             position: absolute;
             right: 71px;
-            bottom: 20px;
+            bottom: 25px;
         }
         .card__inner {
             display: flex;
@@ -94,15 +92,15 @@
         }
         .card__inner .card {
             width: 333.5px;
-            height: 470px;
+            height: 460px;
             position: relative;
             background-color: #fff;
             padding: 26px 26px;
             border-right: 1px solid #eeeeee;
         }
         .card__inner .card2 {
-            width: 331px;
-            height: 470px;
+            width: 334px;
+            height: 460px;
             position: relative;
             background-color: #fff;
             padding: 26px 26px;
@@ -117,8 +115,9 @@
             border-radius: 10px;
         }
         .card__inner .card .tit {
-            font-size: 28px;
+            font-size: 20px;
             margin-bottom: 10px;
+            line-height: 28px;
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
@@ -127,8 +126,9 @@
             padding-right: 20px;
         }
         .card__inner .card2 .tit {
-            font-size: 28px;
+            font-size: 20px;
             margin-bottom: 10px;
+            line-height: 28px;
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
@@ -137,9 +137,10 @@
             padding-right: 20px;
         }
         .card__inner .card .desc {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: 300;
             margin-bottom: 30px;
+            line-height: 27.2px;
             color: #666;
             line-height: 1.4;
             overflow: hidden;
@@ -149,9 +150,10 @@
             -webkit-box-orient: vertical;
         }
         .card__inner .card2 .desc {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: 300;
             margin-bottom: 30px;
+            line-height: 27.2px;
             color: #666;
             line-height: 1.4;
             overflow: hidden;
@@ -161,33 +163,33 @@
             -webkit-box-orient: vertical;
         }
         .card__inner .card .more {
-            width: 35px;
-            height: 35px;
+            width: 37.6px;
+            height: 40px;
             background-image: url(img/pro01.jpg);
             display: block;
             position: absolute;
             right: 25px;
-            bottom: 19px;
+            bottom: 25px;
             border-radius: 5px;
         }
         .card__inner .card2 .more2 {
-            width: 35px;
-            height: 35px;
+            width: 37.6px;
+            height: 40px;
             background-image: url(img/pro02.jpg);
             display: block;
             position: absolute;
             right: 25px;
-            bottom: 19px;
+            bottom: 25px;
             border-radius: 5px;
         }
         .card__inner .card .more3 {
-            width: 35px;
-            height: 35px;
+            width: 37.6px;
+            height: 40px;
             background-image: url(img/pro03.jpg);
             display: block;
             position: absolute;
             right: 25px;
-            bottom: 19px;
+            bottom: 25px;
             border-radius: 5px;
         }
     </style>
@@ -197,31 +199,29 @@
         <div class="card__inner container">
             <article class="card ">
                 <img src="img/art01.jpg" alt="art">
-                <h2 class="roboto400 tit">Art is a diverse range of human activity</h2>
-                <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures.</p>
+                <h2 class="roboto400 tit">Art is a diverse range of human activity, interpretation has varied greatly throughout history</h2>
+                <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures. There is no generally agreed definition of what constitutes art</p>
                 <p class="roboto400 right">Art</p>
                 <p class="roboto300 right2">6Resources</p>
                 <a href="#" class="more"><span class="ir">pro</span></a>
             </article>
             <article class="card2 ">
                 <img src="img/art02.jpg" alt="art">
-                <h2 class="roboto400 tit">Art is a diverse range of human activity</h2>
-                <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures.</p>
+                <h2 class="roboto400 tit">Art is a diverse range of human activity, interpretation has varied greatly throughout history</h2>
+                <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures. There is no generally agreed definition of what constitutes art</p>
                 <p class="roboto400 right">Art</p>
                 <p class="roboto300 right2">6Resources</p>
                 <a href="#" class="more2"><span class="ir">pro</span></a>
             </article>
             <article class="card ">
                 <img src="img/art03.jpg" alt="art">
-                <h2 class="roboto400 tit">Art is a diverse range of human activity</h2>
-                <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures.</p>
+                <h2 class="roboto400 tit">Art is a diverse range of human activity, interpretation has varied greatly throughout history</h2>
+                <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures. There is no generally agreed definition of what constitutes art</p>
                 <p class="roboto400 right">Art</p>
                 <p class="roboto300 right2">6Resources</p>
                 <a href="#" class="more3"><span class="ir">pro</span></a>
             </article>
         </div>
-        
     </section>
-    
 </body>
 </html>
