--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
     &lt;div class="card__inner container">
         &lt;article class="card ">
             &lt;img src="img/art01.jpg" alt="art">
+            &lt;a href="#" class="box">&lt;span class="ir">art&lt;/span>&lt;/a>
             &lt;h2 class="roboto400 tit">Art is a diverse range of human activity, interpretation has varied greatly throughout history&lt;/h2>
             &lt;p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures. There is no generally agreed definition of what constitutes art&lt;/p>
             &lt;p class="roboto400 right">Art&lt;/p>
@@ -10,6 +11,7 @@
         &lt;/article>
         &lt;article class="card2 ">
             &lt;img src="img/art02.jpg" alt="art">
+            &lt;a href="#" class="box">&lt;span class="ir">art&lt;/span>&lt;/a>
             &lt;h2 class="roboto400 tit">Art is a diverse range of human activity, interpretation has varied greatly throughout history&lt;/h2>
             &lt;p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures. There is no generally agreed definition of what constitutes art&lt;/p>
             &lt;p class="roboto400 right">Art&lt;/p>
@@ -18,8 +20,9 @@
         &lt;/article>
         &lt;article class="card ">
             &lt;img src="img/art03.jpg" alt="art">
+            &lt;a href="#" class="box">&lt;span class="ir">art&lt;/span>&lt;/a>
             &lt;h2 class="roboto400 tit">Art is a diverse range of human activity, interpretation has varied greatly throughout history&lt;/h2>
-            &lt;p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures.There is no generally agreed definition of what constitutes art&lt;/p>
+            &lt;p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures. There is no generally agreed definition of what constitutes art&lt;/p>
             &lt;p class="roboto400 right">Art&lt;/p>
             &lt;p class="roboto300 right2">6Resources&lt;/p>
             &lt;a href="#" class="more3">&lt;span class="ir">pro&lt;/span>&lt;/a>
