--- a/javascript/study/cardType03.html
+++ b/javascript/study/cardType03.html
@@ -18,7 +18,7 @@
                 해당 코딩은 위 카드 3개만 만들었습니다.
             </p>
             <div class="t_iframe">
-                <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoLRt8dyA3nlh2tlGzhrd3y%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D162%253A71" allowfullscreen></iframe>
+                <iframe width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoLRt8dyA3nlh2tlGzhrd3y%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D162%253A71" allowfullscreen></iframe>
             </div>
 
             <h3 class="t_tit2">Site HTML</h3>
