--- a/html/alphabet.html
+++ b/html/alphabet.html
@@ -100,7 +100,7 @@
                         <tr>
                             <td>04</td>
                             <td>&lt;address&gt;</td>
-                            <td>&lt;address&gt;</td>
+                            <td>사람이나 단체, 조직 등에 대한 연락처 정보를 열람할 수 있게 하는데 사용한다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -124,7 +124,7 @@
                         <tr>
                             <td>07</td>
                             <td>&lt;article&gt;</td>
-                            <td>&lt;article&gt;</td>
+                            <td>문서, 페이지, 애플리케이션 등 독립적으로 구분해 배포하거나 재사용 할 수 있는 구역을 나타낸다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -212,7 +212,7 @@
                         <tr>
                             <td>18</td>
                             <td>&lt;body&gt;</td>
-                            <td>&lt;body&gt;</td>
+                            <td>HTML 문서의 내용을 나타낸다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -220,7 +220,7 @@
                         <tr>
                             <td>19</td>
                             <td>&lt;br&gt;</td>
-                            <td>&lt;br&gt;</td>
+                            <td>텍스트의 줄바꿈을 하도록 설정하는 태그이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -228,7 +228,7 @@
                         <tr>
                             <td>20</td>
                             <td>&lt;button&gt;</td>
-                            <td>&lt;button&gt;</td>
+                            <td>클릭 가능한 버튼을 나타내는 태그이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -255,7 +255,7 @@
                             <td>&lt;center&gt;</td>
                             <td><a href="#">__</a></td>
                             <td></td>
-                            <td></td>
+                            <td><span class="material-symbols-outlined" title="현재는 사용하지 않습니다.">delete</span></td>
                         </tr>
                         <tr>
                             <td>24</td>
@@ -276,7 +276,7 @@
                         <tr>
                             <td>26</td>
                             <td>&lt;col&gt;</td>
-                            <td>&lt;col&gt;</td>
+                            <td>표의 열을 나타내며, 열에 속하는 칸에 공통된 의미를 부여할 때 사용한다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -284,7 +284,7 @@
                         <tr>
                             <td>27</td>
                             <td>&lt;colgroup&gt;</td>
-                            <td>&lt;colgroup&gt;</td>
+                            <td>표의 열을 묶는 그룹을 정의한다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -364,7 +364,7 @@
                         <tr>
                             <td>37</td>
                             <td>&lt;div&gt;</td>
-                            <td>&lt;div&gt;</td>
+                            <td>플로우 콘텐츠를 위한 통용 컨테이너이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -388,7 +388,7 @@
                         <tr>
                             <td>40</td>
                             <td>&lt;em&gt;</td>
-                            <td>&lt;em&gt;</td>
+                            <td>요소는 텍스트의 강세를 나타낸다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -420,7 +420,7 @@
                         <tr>
                             <td>44</td>
                             <td>&lt;figure&gt;</td>
-                            <td>&lt;figure&gt;</td>
+                            <td>독립적인 콘텐츠를 표현한다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -436,7 +436,7 @@
                         <tr>
                             <td>46</td>
                             <td>&lt;footer&gt;</td>
-                            <td>&lt;footer&gt;</td>
+                            <td>가장 가까운 구획 콘텐츠나 구획 루트의 푸터를 나타낸다. 푸터는 일반적으로 구획의 작성자, 저작권 정보, 관련 문서 등의 내용을 담아낸다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -444,7 +444,7 @@
                         <tr>
                             <td>47</td>
                             <td>&lt;form&gt;</td>
-                            <td>&lt;form&gt;</td>
+                            <td>정보를 제출하기 위한 대화형 컨트롤을 포함하는 문서 구획을 나타낸다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -468,7 +468,7 @@
                         <tr>
                             <td>50</td>
                             <td>&lt;head&gt;</td>
-                            <td>&lt;head&gt;</td>
+                            <td>기계가 식별할 수 있는 문서 정보를 담아낸다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -476,7 +476,7 @@
                         <tr>
                             <td>51</td>
                             <td>&lt;header&gt;</td>
-                            <td>&lt;header&gt;</td>
+                            <td>소개 및 탐색에 도움을 주는 콘텐츠를 나타낸다.. 제목, 로고, 검색 폼, 작성자 이름 등의 요소도 포함할 수 있다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -484,7 +484,7 @@
                         <tr>
                             <td>52</td>
                             <td>&lt;h1&gt;</td>
-                            <td>&lt;h1&gt;</td>
+                            <td> h1 ~ h6의 6단계중 하나로 구획 제목을 나타낸다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -500,7 +500,7 @@
                         <tr>
                             <td>54</td>
                             <td>&lt;hr&gt;</td>
-                            <td>&lt;hr&gt;</td>
+                            <td>이야기 장면 전환, 구획 내 주제 변경 등, 문단 레벨 요소에서 주제의 분리를 나타낸다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -508,7 +508,7 @@
                         <tr>
                             <td>55</td>
                             <td>&lt;html&gt;</td>
-                            <td>&lt;html&gt;</td>
+                            <td>HTML 문서의 루트(최상단 요소)를 나타내며, "루트 요소"라고도 부른다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -524,7 +524,7 @@
                         <tr>
                             <td>57</td>
                             <td>&lt;iframe&gt;</td>
-                            <td>&lt;iframe&gt;</td>
+                            <td>중첩 브라우징 맥락을 나타내는 요소로, 현재 문서 안에 다른 HTML 페이지를 삽입한다,</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -540,7 +540,7 @@
                         <tr>
                             <td>59</td>
                             <td>&lt;img&gt;</td>
-                            <td>&lt;img&gt;</td>
+                            <td>문서에 이미지를 넣는 태그이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -596,7 +596,7 @@
                         <tr>
                             <td>66</td>
                             <td>&lt;li&gt;</td>
-                            <td>&lt;li&gt;</td>
+                            <td>목록의 항목을 나타낸다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -604,7 +604,7 @@
                         <tr>
                             <td>67</td>
                             <td>&lt;link&gt;</td>
-                            <td>&lt;link&gt;</td>
+                            <td>현재 문서와 외부 리소스의 관계를 명시한다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -612,7 +612,7 @@
                         <tr>
                             <td>68</td>
                             <td>&lt;main&gt;</td>
-                            <td>&lt;main&gt;</td>
+                            <td>문서 <body>의 주요 콘텐츠를 나타낸다. 주요 콘텐츠 영역은 문서의 핵심 주제나 앱의 핵심 기능에 직접적으로 연결됐거나 확장하는 콘텐츠로 이루어진다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -676,7 +676,7 @@
                         <tr>
                             <td>76</td>
                             <td>&lt;nav&gt;</td>
-                            <td>&lt;nav&gt;</td>
+                            <td>문서의 부분 중 현재 페이지 내, 또는 다른 페이지로의 링크를 보여주는 구획을 나타낸다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -756,7 +756,7 @@
                         <tr>
                             <td>86</td>
                             <td>&lt;p&gt;</td>
-                            <td>&lt;p&gt;</td>
+                            <td> 하나의 문단을 나타낸다. 글의 내용을 작성할 때 주로 쓰인다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -876,7 +876,7 @@
                         <tr>
                             <td>101</td>
                             <td>&lt;script&gt;</td>
-                            <td>&lt;script&gt;</td>
+                            <td> 데이터와 실행 가능한 코드를 문서에 포함할 때 사용하며 보통 JavaScript 코드와 함께 쓴다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -884,7 +884,7 @@
                         <tr>
                             <td>102</td>
                             <td>&lt;section&gt;</td>
-                            <td>&lt;section&gt;</td>
+                            <td>HTML 문서의 독립적인 구획을 나타내며, 더 적합한 의미를 가진 요소가 없을 때 사용한다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -940,7 +940,7 @@
                         <tr>
                             <td>109</td>
                             <td>&lt;span&gt;</td>
-                            <td>&lt;span&gt;</td>
+                            <td>구문 콘텐츠를 위한 통용 인라인 컨테이너로, 본질적으로는 아무것도 나타내지 않는다. 스타일을 적용하기 위해서, 또는 lang 등 어떤 특성의 값을 서로 공유하는 요소를 묶을 때 사용할 수 있다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -956,7 +956,7 @@
                         <tr>
                             <td>111</td>
                             <td>&lt;strong&gt;</td>
-                            <td>&lt;strong&gt;</td>
+                            <td>굵은 글씨를 표현할 때 쓰는 태그이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -964,7 +964,7 @@
                         <tr>
                             <td>112</td>
                             <td>&lt;style&gt;</td>
-                            <td>&lt;style&gt;</td>
+                            <td>문서나 문서 일부에 대한 스타일 정보를 포함하는 태그이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -996,7 +996,7 @@
                         <tr>
                             <td>116</td>
                             <td>&lt;table&gt;</td>
-                            <td>&lt;table&gt;</td>
+                            <td>행과 열로 이루어진 표를 나타내는 태그이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -1004,7 +1004,7 @@
                         <tr>
                             <td>117</td>
                             <td>&lt;tbody&gt;</td>
-                            <td>&lt;tbody&gt;</td>
+                            <td>표의 여러 행(tr)을 묶어서 표 본문을 구성하는 태그이다</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -1012,7 +1012,7 @@
                         <tr>
                             <td>118</td>
                             <td>&lt;td&gt;</td>
-                            <td>&lt;td&gt;</td>
+                            <td>데이터를 포함하는 표의 셀을 정의하는 태그이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -1052,7 +1052,7 @@
                         <tr>
                             <td>123</td>
                             <td>&lt;thead&gt;</td>
-                            <td>&lt;thead&gt;</td>
+                            <td>테이블의 열의 머리글인 행들의 집합을 나타내는 태그이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -1068,7 +1068,7 @@
                         <tr>
                             <td>125</td>
                             <td>&lt;title&gt;</td>
-                            <td>&lt;title&gt;</td>
+                            <td>브라우저의 제목 표시줄이나 페이지 탭에 보이는 문서 제목을 정의하는 태그이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -1108,7 +1108,7 @@
                         <tr>
                             <td>130</td>
                             <td>&lt;ul&gt;</td>
-                            <td>&lt;ul&gt;</td>
+                            <td>정렬되지 않은 목록을 나타내는 태그이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
@@ -1116,7 +1116,7 @@
                         <tr>
                             <td>131</td>
                             <td>&lt;var&gt;</td>
-                            <td>&lt;var&gt;</td>
+                            <td>수학 표현 또는 프로그래밍에서 변수의 이름을 나타내는 태그이다.</td>
                             <td><a href="#">__</a></td>
                             <td></td>
                             <td></td>
