--- a/javascript/javascript06.html
+++ b/javascript/javascript06.html
@@ -280,7 +280,7 @@
     document.querySelector(".sample03_Q2").innerHTML = "[100, 200, 300, 400, 500]";
     document.querySelector(".sample03_M2").innerHTML = "pop()";
     document.querySelector(".sample03_P2").innerHTML = arrPush2; // 500
-    document.querySelector(".sample03_A2").innerHTML = arrNum2;  // 100, 200 , 300, 400, 500
+    document.querySelector(".sample03_A2").innerHTML = arrNum2;  // 100, 200 , 300, 400
 </code></pre>
                     </div>
                 </div>
@@ -395,7 +395,7 @@
             document.querySelector(".sample03_Q2").innerHTML = "[100, 200, 300, 400, 500]";
             document.querySelector(".sample03_M2").innerHTML = "pop()";
             document.querySelector(".sample03_P2").innerHTML = arrPush2; // 500
-            document.querySelector(".sample03_A2").innerHTML = arrNum2;  // 100, 200 , 300, 400, 500
+            document.querySelector(".sample03_A2").innerHTML = arrNum2;  // 100, 200 , 300, 400
         }
     </script>
 </body>
