--- a/site/cardType/cardType03.html
+++ b/site/cardType/cardType03.html
@@ -7,14 +7,10 @@
     <title>카드 유형 03</title>
         <style>
         /* 폰트 */
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+        @import url('https://webfontworld.github.io/score/SCoreDream.css');
 
-        .roboto300 {
-            font-family: 'Roboto', sans-serif;
-            font-weight: 300;
-        }
-        .roboto400 {
-            font-family: 'Roboto', sans-serif;
+        .score {
+            font-family: 'SCoreDream';
             font-weight: 400;
         }
 
@@ -29,23 +25,26 @@
         }
         img {
             width: 100%;
-            box-shadow: 4px 4px 5px 0 rgba(0, 0, 0, 0.05);
+        }
+        h1, h2, h3, h4, h5, h6 {
+            font-weight: normal;
         }
         .type2 {
             padding-top: 10px;
         }
+
         /* common */
         .container {
             width: 1160px;
-            height: 517px;
+            padding: 0 20px;
             margin: 0 auto;
-            background-color: #fff;
         }
         .section {
-            padding: 120px 0px;
+            padding: 120px 0;
         }
         .section > h2 {
             font-size: 50px;
+            line-height: 1;
             text-align: center;
             margin-bottom: 20px;
         }
@@ -56,195 +55,176 @@
             text-align: center;
             margin-bottom: 70px;
         }
-        .blue {
-            width: 1920px;
-            background-color: #2254c3;
-        }
 
-        /* ir 효과(이미지 대체 효과 == alt)  */ /* 중요함 */
-        .ir {
-            display: block;
-            overflow: hidden;
-            font-size: 0;
-            line-height: 0;
-            text-indent: -9999px;
+        /* blind : 접근성 */
+        .blind {
+            position:absolute;
+            clip:rect(0 0 0 0);
+            width:1px;
+            height:1px;
+            margin:-1px;
+            overflow:hidden
         }
 
         /* cardType03 */
-        .line {
-            border: 0.5px solid #f5f5f5;
+        body {
+            background-color: #2254c3;
         }
-        .right {
-            text-align: right;
+        .card_inner {
+            display: flex;
+        }
+        .card_inner .card {
+            padding: 26px;
+            width: 33.3333%;
+            background-color: #fff;
+        }
+        .card_inner .card:nth-child(1) {
+            border-right: 1px solid #eeeeee;
+        }
+        .card_inner .card:nth-child(2) {
+            border-right: 1px solid #eeeeee;
+        }
+        .card__header {
+            position: relative;
+        }
+        .card__header img {
+            border-radius: 10px;
+            box-shadow: 4px 4px 5px 0 rgba(0, 0, 0, 0.05);
+            margin-bottom: 20px;
+        }
+        .card__header figcaption {
             position: absolute;
-            right: 73px;
-            bottom: 40px;
+            right: 10px;
+            top: 10px;
+            padding: 4px 20px;
+            border-radius: 50px;
+            background-color: rgba(255, 255, 255, 0.300);
+            text-align: center;
+            font-size: 14px;
+            color: #000;
+        }
+
+        .card__contents {}
+        .card__contents h3{
+            font-size: 20px;
+            line-height: 1.4;
+            margin-bottom: 10px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2; 
+            -webkit-box-orient: vertical;
+        }
+        .card__contents p{
+            color: #666;
+            font-size: 16px;
+            line-height: 1.7;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 3; 
+            -webkit-box-orient: vertical;
+            margin-bottom: 30px;
+        }
+
+        .card__footer {
+            display: flex;
+            justify-content: end;
+        }
+        .card__footer h4 {
+            text-align: right;
             color: #dd2a2a;
         }
-        .right2 {
-            text-align: right;
-            position: absolute;
-            right: 71px;
-            bottom: 25px;
-        }
-        .card__inner {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-        .card__inner .card {
-            width: 333.5px;
-            height: 460px;
-            position: relative;
-            background-color: #fff;
-            padding: 26px 26px;
-            border-right: 1px solid #eeeeee;
-        }
-        .card__inner .card2 {
-            width: 334px;
-            height: 460px;
-            position: relative;
-            background-color: #fff;
-            padding: 26px 26px;
-            border-right: 1px solid #eeeeee;
-        }
-        .card__inner .card img {
-            margin-bottom: 19px;
-            border-radius: 10px;
-        }
-        .card__inner .card2 img {
-            margin-bottom: 19px;
-            border-radius: 10px;
-        }
-        .card__inner .card .tit {
-            font-size: 20px;
-            margin-bottom: 10px;
-            line-height: 28px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2; 
-            -webkit-box-orient: vertical;
-            padding-right: 20px;
-        }
-        .card__inner .card2 .tit {
-            font-size: 20px;
-            margin-bottom: 10px;
-            line-height: 28px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2; 
-            -webkit-box-orient: vertical;
-            padding-right: 20px;
-        }
-        .card__inner .card .desc {
-            font-size: 16px;
-            font-weight: 300;
-            margin-bottom: 30px;
-            line-height: 27.2px;
+        .card__footer em {
+            display: block;
             color: #666;
-            line-height: 1.4;
+            font-style: normal;
+        }
+        .card__footer i {
+            width: 40px;
+            height: 40px;
+            background: #fff;
+            border-radius: 50%;
             overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 3; 
-            -webkit-box-orient: vertical;
-        }
-        .card__inner .card2 .desc {
-            font-size: 16px;
-            font-weight: 300;
-            margin-bottom: 30px;
-            line-height: 27.2px;
-            color: #666;
-            line-height: 1.4;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 3; 
-            -webkit-box-orient: vertical;
-        }
-        .card__inner .card .more {
-            width: 37.6px;
-            height: 40px;
-            background-image: url(img/pro01.jpg);
             display: block;
-            position: absolute;
-            right: 25px;
-            bottom: 25px;
-            border-radius: 5px;
-        }
-        .card__inner .card2 .more2 {
-            width: 37.6px;
-            height: 40px;
-            background-image: url(img/pro02.jpg);
-            display: block;
-            position: absolute;
-            right: 25px;
-            bottom: 25px;
-            border-radius: 5px;
-        }
-        .card__inner .card .more3 {
-            width: 37.6px;
-            height: 40px;
-            background-image: url(img/pro03.jpg);
-            display: block;
-            position: absolute;
-            right: 25px;
-            bottom: 25px;
-            border-radius: 5px;
-        }
-        .card__inner .card .box {
-            width: 70px;
-            height: 20px;
-            background-image: url(img/art_g.svg);
-            display: block;
-            position: absolute;
-            right: 35.7px;
-            top: 36px;
-            border-radius: 5px;
-        }
-        .card__inner .card2 .box {
-            width: 70px;
-            height: 20px;
-            background-image: url(img/art_g.svg);
-            display: block;
-            position: absolute;
-            right: 35.7px;
-            top: 36px;
-            border-radius: 5px;
+            margin-left: 10px;
+            margin-top: 0px;
+            box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
         }
     </style>
 </head>
 <body>
-    <section id="cardType03" class="card__wrap Roboto400 section blue">
-        <div class="card__inner container">
-            <article class="card ">
-                <img src="img/art01.jpg" alt="art">
-                <a href="#" class="box"><span class="ir">art</span></a>
-                <h2 class="roboto400 tit">Art is a diverse range of human activity, interpretation has varied greatly throughout history</h2>
-                <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures. There is no generally agreed definition of what constitutes art</p>
-                <p class="roboto400 right">Art</p>
-                <p class="roboto300 right2">6Resources</p>
-                <a href="#" class="more"><span class="ir">pro</span></a>
+    <section id="cardType03" class="card-wrap score section">
+        <h2 class="blind">건축의 세계</h2>
+        <div class="card_inner container">
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg03_01.jpg" alt="Architects">
+                    <figcaption>Art</figcaption>
+                </figure>
+                <div class="card__contents">
+                    <h3>
+                        Art is a diverse range of human
+                        activity, interpretation has varied greatly
+                        throughout history
+                    </h3>
+                    <p>
+                        There is no generally agreed definition of what
+                        constitutes art, and its interpretation has varied
+                        greatly throughout history and across cultures.
+                        There is no generally agreed definition of what constitutes art
+                    </p>
+                </div>
+                <div class="card__footer">
+                    <h4>건축 박사<em>Hesperioidea</em></h4>
+                    <i><img src="img/card_bg03_icon01.png" alt="Hesperioidea"></i>
+                </div>
             </article>
-            <article class="card2 ">
-                <img src="img/art02.jpg" alt="art">
-                <a href="#" class="box"><span class="ir">art</span></a>
-                <h2 class="roboto400 tit">Art is a diverse range of human activity, interpretation has varied greatly throughout history</h2>
-                <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures. There is no generally agreed definition of what constitutes art</p>
-                <p class="roboto400 right">Art</p>
-                <p class="roboto300 right2">6Resources</p>
-                <a href="#" class="more2"><span class="ir">pro</span></a>
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg03_02.jpg" alt="Architects">
+                    <figcaption>Art</figcaption>
+                </figure>
+                <div class="card__contents">
+                    <h3>
+                        Art is a diverse range of human
+                        activity, interpretation has varied greatly
+                        throughout history
+                    </h3>
+                    <p>
+                        There is no generally agreed definition of what
+                        constitutes art, and its interpretation has varied
+                        greatly throughout history and across cultures.
+                        There is no generally agreed definition of what constitutes art
+                    </p>
+                </div>
+                <div class="card__footer">
+                    <h4>건축 박사<em>Hesperioidea</em></h4>
+                    <i><img src="img/card_bg03_icon02.png" alt="Hesperioidea"></i>
+                </div>
             </article>
-            <article class="card ">
-                <img src="img/art03.jpg" alt="art">
-                <a href="#" class="box"><span class="ir">art</span></a>
-                <h2 class="roboto400 tit">Art is a diverse range of human activity, interpretation has varied greatly throughout history</h2>
-                <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures. There is no generally agreed definition of what constitutes art</p>
-                <p class="roboto400 right">Art</p>
-                <p class="roboto300 right2">6Resources</p>
-                <a href="#" class="more3"><span class="ir">pro</span></a>
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg03_03.jpg" alt="Architects">
+                    <figcaption>Art</figcaption>
+                </figure>
+                <div class="card__contents">
+                    <h3>
+                        Art is a diverse range of human
+                        activity, interpretation has varied greatly
+                        throughout history
+                    </h3>
+                    <p>
+                        There is no generally agreed definition of what
+                        constitutes art, and its interpretation has varied
+                        greatly throughout history and across cultures.
+                        There is no generally agreed definition of what constitutes art
+                    </p>
+                </div>
+                <div class="card__footer">
+                    <h4>건축 박사<em>Hesperioidea</em></h4>
+                    <i><img src="img/card_bg03_icon03.png" alt="Hesperioidea"></i>
+                </div>
             </article>
         </div>
     </section>
