--- a/javascript/study/cardType03.html
+++ b/javascript/study/cardType03.html
@@ -28,7 +28,7 @@
             </p>
             <div class="t_code">
 <pre><code>    &lt;section id="cardType03" class="card-wrap score section">
-        &lt;h2 class="blind">건축의 세계&lt;/h2>
+        &lt;h2 class="blind">Art&lt;/h2>
         &lt;div class="card_inner container">
             &lt;article class="card">
                 &lt;figure class="card__header">
@@ -49,7 +49,7 @@
                     &lt;/p>
                 &lt;/div>
                 &lt;div class="card__footer">
-                    &lt;h4>건축 박사&lt;em>Hesperioidea&lt;/em>&lt;/h4>
+                    &lt;h4>Art&lt;em>6Resources&lt;/em>&lt;/h4>
                     &lt;i>&lt;img src="img/card_bg03_icon01.png" alt="Hesperioidea">&lt;/i>
                 &lt;/div>
             &lt;/article>
@@ -72,7 +72,7 @@
                     &lt;/p>
                 &lt;/div>
                 &lt;div class="card__footer">
-                    &lt;h4>건축 박사&lt;em>Hesperioidea&lt;/em>&lt;/h4>
+                    &lt;h4>Art&lt;em>6Resources&lt;/em>&lt;/h4>
                     &lt;i>&lt;img src="img/card_bg03_icon02.png" alt="Hesperioidea">&lt;/i>
                 &lt;/div>
             &lt;/article>
@@ -95,7 +95,7 @@
                     &lt;/p>
                 &lt;/div>
                 &lt;div class="card__footer">
-                    &lt;h4>건축 박사&lt;em>Hesperioidea&lt;/em>&lt;/h4>
+                    &lt;h4>Art&lt;em>6Resources&lt;/em>&lt;/h4>
                     &lt;i>&lt;img src="img/card_bg03_icon03.png" alt="Hesperioidea">&lt;/i>
                 &lt;/div>
             &lt;/article>
