--- a/site/cardType/cardType03.html
+++ b/site/cardType/cardType03.html
@@ -155,7 +155,7 @@
 </head>
 <body>
     <section id="cardType03" class="card-wrap score section">
-        <h2 class="blind">건축의 세계</h2>
+        <h2 class="blind">Art</h2>
         <div class="card_inner container">
             <article class="card">
                 <figure class="card__header">
@@ -176,7 +176,7 @@
                     </p>
                 </div>
                 <div class="card__footer">
-                    <h4>건축 박사<em>Hesperioidea</em></h4>
+                    <h4>Art<em>6Resources</em></h4>
                     <i><img src="img/card_bg03_icon01.png" alt="Hesperioidea"></i>
                 </div>
             </article>
@@ -199,7 +199,7 @@
                     </p>
                 </div>
                 <div class="card__footer">
-                    <h4>건축 박사<em>Hesperioidea</em></h4>
+                    <h4>Art<em>6Resources</em></h4>
                     <i><img src="img/card_bg03_icon02.png" alt="Hesperioidea"></i>
                 </div>
             </article>
@@ -222,7 +222,7 @@
                     </p>
                 </div>
                 <div class="card__footer">
-                    <h4>건축 박사<em>Hesperioidea</em></h4>
+                    <h4>Art<em>6Resources</em></h4>
                     <i><img src="img/card_bg03_icon03.png" alt="Hesperioidea"></i>
                 </div>
             </article>
