--- a/javascript/study/jpp.html
+++ b/javascript/study/jpp.html
@@ -16,18 +16,24 @@
             <!-- 01 -->
             <div id="sample01" class="sample">
                 <h3 class="t_tit2">01. 배열 메서드 : join() : 배열 요소 문자열 결합 : 반환(문자열)</h3>
-                <p class="t_tit3"></p><br>
+                <p class="t_desc2">join 메서드는 배열의 모든 요소 값을 문자열로 변경하며, 인수로 받은 문자로 연결해서 문장열로 반환한다.</p><br>
                 <div class="t_code">
-<pre><code class="language.js">     const arrNum = [100, 200, 300, 400, 500];
-    const text1 = arrNum.join('');
-    const text2 = arrNum.join(' ');
-    const text3 = arrNum.join('*');
-    const text4 = arrNum.join('-');
+<pre><code class="language.js">    const arrNum = [100, 200, 300, 400, 500];
+    const text1 = arrNum.join('');      // 기본값
+    const text2 = arrNum.join(' ');     // 띄어쓰기
+    const text3 = arrNum.join('*');     // *
+    const text4 = arrNum.join('-');     // -
 </code></pre>
                 </div>
             </div>
             <table class="t_table">
                 <tbody>
+                    <thead>
+                        <tr>
+                            <th class="ce">메서드</th>
+                            <th class="ce">결과값</th>
+                        </tr>
+                    </thead>
                     <tr>
                         <td class="ce">text1</td>
                         <td class="ce">100200300400500</td>
@@ -52,14 +58,14 @@
             <!-- 02 -->
             <div id="sample02" class="sample">
                 <h3 class="t_tit2">02. 배열 메서드 : push()</h3>
-                <p class="t_tit3">push() 메서드는 배열 마지막 요소에 추가 : 반환(숫자)</p><br>
+                <p class="t_desc2">push() 메서드는 배열의 끝에 하나 이상의 요소를 추가 후 배열의 새로운 길이를 반환한다.</p><br>
                 <div class="t_code">
 <pre><code class="language.js">    const arrNum = [100, 200, 300, 400, 500]
     const arrPush = arrNum.push(600);
 
     document.querySelector(".sample01_M1").innerHTML = "push(600)";
-    document.querySelector(".sample01_P1").innerHTML = arrPush; // 6
-    document.querySelector(".sample01_A1").innerHTML = arrNum;  // 100, 200 , 300, 400, 500, 600
+    document.querySelector(".sample01_P1").innerHTML = arrPush;      // 6
+    document.querySelector(".sample01_A1").innerHTML = arrNum;      // 100, 200 , 300, 400, 500, 600
 </code></pre>
                 </div>
             </div>
@@ -85,14 +91,14 @@
             <!-- 03 -->
             <div id="sample03" class="sample">
                 <h3 class="t_tit2">03. 배열 메서드 : pop()</h3>
-                <p class="t_tit3">pop() 메서드는 배열 마지막 요소를 삭저 : 변환(삭제된 요소)</p><br>
+                <p class="t_desc2">pop() 메서드는 배열에서 마지막 요소를 제거하고 그 요소를 반환한다.</p><br>
                 <div class="t_code">
 <pre><code class="language.js">    const arrNum2 = [100, 200, 300, 400, 500]
-    const arrPush2 = arrNum2.pop();
+    const arrPush = arrNum.pop();
 
     document.querySelector(".sample03_M1").innerHTML = "pop()";
-    document.querySelector(".sample03_P1").innerHTML = arrPush2; // 500
-    document.querySelector(".sample03_A1").innerHTML = arrNum2;  // 100, 200 , 300, 400
+    document.querySelector(".sample03_P1").innerHTML = arrPush;      // 500
+    document.querySelector(".sample03_A1").innerHTML = arrNum;      // 100, 200 , 300, 400
 </code></pre>
                 </div>
             </div>
